@@ -1,5 +1,11 @@
 2002-01-19  Bruno Haible  <bruno@clisp.org>
 
+	* gettext.m4 (AM_GNU_GETTEXT): Don't consider that -liconv is
+	necessary for -lintl. Instead, use the $LIBICONV value determined by
+	the AM_ICONV macro.
+
+2002-01-19  Bruno Haible  <bruno@clisp.org>
+
 	* gettext.m4 (AM_GNU_GETTEXT): Remove shortcut check for <libintl.h>.
 
 2002-01-18  Bruno Haible  <bruno@clisp.org>
